--- a/css/styles.css
+++ b/css/styles.css
@@ -352,12 +352,12 @@ figcaption {
 }
 .float-left {
   width: 100%;
-  padding: 5px 20px 5px 0;
+  padding: 5px;
 }
 
 .float-right {
   width: 100%;
-  padding: 5px 0 5px 20px;
+  padding: 5px;
 }
 
 }
