--- a/css/styles.css
+++ b/css/styles.css
@@ -352,12 +352,14 @@ figcaption {
 }
 .float-left {
   float: none;
+  align-content: center;
   width: 100%;
   padding: 5px;
 }
 
 .float-right {
   float: none;
+  align-content: center;
   width: 100%;
   padding: 5px;
 }
