--- a/css/styles.css
+++ b/css/styles.css
@@ -353,6 +353,7 @@ figcaption {
 .float-left {
   float: none;
   align-content: center;
+  max-width: 300px;
   width: 100%;
   padding: 5px;
 }
@@ -360,6 +361,7 @@ figcaption {
 .float-right {
   float: none;
   align-content: center;
+  max-width: 300px;
   width: 100%;
   padding: 5px;
 }
