--- a/css/styles.css
+++ b/css/styles.css
@@ -353,7 +353,6 @@ figcaption {
 .float-left {
   float: none;
   align-content: center;
-  max-width: 300px;
   width: 100%;
   padding: 5px;
 }
@@ -361,9 +360,11 @@ figcaption {
 .float-right {
   float: none;
   align-content: center;
-  max-width: 300px;
   width: 100%;
   padding: 5px;
 }
 
+figure {
+  max-width: 300px;
+}
 }
