--- a/css/styles.css
+++ b/css/styles.css
@@ -258,13 +258,13 @@ figcaption {
 
 .float-left {
   float: left;
-  width: auto;
+  width: 300px;
   padding: 5px 20px 5px 0;
 }
 
 .float-right {
   float: right;
-  width: auto;
+  width: 300px;
   padding: 5px 0 5px 20px;
 }
 
