--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,18 @@ figcaption {
   padding: 5px 0 5px 20px;
 }
 
+.float-left-lg {
+  float: left;
+  width: 400px;
+  padding: 5px 20px 5px 0;
+}
+
+.float-right-lg {
+  float: right;
+  width: 400px;
+  padding: 5px 0 5px 20px;
+}
+
 .content {
   margin: auto;
   width: 60%;
@@ -285,7 +297,7 @@ figcaption {
 }
 
 .img-proj {
-  padding: 20px
+  padding: 20px;
 }
 
 .blockquote {
